# MSMEs-Financial-Health-Card

./: .gitignore  AGENT.md  README.md
backend/: .env.example  conftest.py  eval_results.txt  pyproject.toml
backend/.deepeval/: .deepeval_telemetry.txt
backend/app/: main.py
backend/app/data/: mock_generators.py  personas.py
backend/app/graph/: metrics.py  nodes.py  pipeline.py  risk_engine.py
backend/app/rag/: build_index.py  retriever.py
backend/app/schemas/: models.py
backend/tests/: test_api.py  test_build_index.py  test_data.py  test_integration.py  test_nodes.py  test_nodes_llm.py  test_pipeline.py  test_retriever.py  test_risk_engine.py  test_schemas.py  test_smoke.py
backend/tests/evals/: golden_dataset.json  test_eval_deepeval.py  test_eval_layer5_trajectory.py  test_eval_layer6_injection.py  test_eval_regression.py
docs/prototype-snapshots/: file.jpe
docs/superpowers/plans/: 2026-07-06-msme-financial-health-card.md  2026-07-13-submission-readiness-repairs.md
docs/superpowers/specs/: 2026-07-13-submission-readiness-repair-design.md
frontend/: jest.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Dashboard.test.tsx  Dashboard.tsx  GroundingTrace.tsx  HealthCard.tsx  PersonaSelector.tsx  ProfileForm.tsx  StressPanel.tsx  WeightRationale.tsx
frontend/lib/: api.test.ts  api.ts  types.ts
