[project]
name = "msme-financial-health-card"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "langgraph==0.2.60",
    "google-generativeai==0.8.3",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.3.1",
    "tokenizers>=0.21.0",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "pypdf>=4.0.0",
    "langsmith>=0.9.7",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.27.2",
]
