[project]
name = "msme-financial-health-card"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic>=2.11.7",
    "langgraph==0.2.60",
    "openai>=1.0.0",
    "google-genai>=1.16.1",
    "google-generativeai==0.8.3",
    "pydantic-ai[google-genai]>=0.0.14",
    "langsmith>=0.9.7",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.3.1",
    "tokenizers>=0.21.0",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "python-dotenv>=1.1.1",
    "pypdf>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx>=0.28.1",
    "deepeval==4.1.0",
    "posthog>=3.0.0",
]
